[workspace]
members = [
    "cmd_test",
    "fixed_queue",
    "component/*",
]

[package]
authors = ["LiangYongrui <leungyongrui@gmail.com>"]
description = """
rust cloud cache

fork from https://github.com/tokio-rs/mini-redis
"""
edition = "2018"
name = "rcc"
version = "0.0.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[[bin]]
name = "server"
path = "./bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
server = { path = "./component/server" }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
common = { path = "component/common" }
