[workspace]
members = ["cmd_test", "component/*"]

[package]
authors = ["LiangYongrui <leungyongrui@gmail.com>"]
description = """
rusty dictionary server
"""
edition = "2021"
name = "rudis"
version = "0.0.0"
license = "MIT"
readme = "readme.md"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[[bin]]
name = "server"
path = "./bin/server.rs"

[[bin]]
name = "pd"
path = "./bin/pd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
server = { path = "./component/server" }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
common = { path = "component/common" }
pd = { path = "component/pd" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
