[package]
name = "cmd_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = { version = "0.2" }
tracing-subscriber = "0.2"
component = { path = "../component" }
