[package]
name = "cmd_test"
version = "0.0.0"
edition = "2018"

[[bin]]
name = "read_write_file"
path = "./bin/read_write_file.rs"

[[bin]]
name = "read_write_bincode"
path = "./bin/read_write_bincode.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = { version = "0.2" }
tracing-subscriber = "0.2"
server = { path = "../component/server" }
opentelemetry-jaeger = "0.15"
tracing-opentelemetry = "0.15"
opentelemetry = { version = "0.16", default-features = false, features = [
    "trace"
] }
bytes = "1"
bincode = "1"
common = { path = "../component/common" }
