[package]
name = "component"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atoi = "0.4"
bytes = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-futures = { version = "0.2" }
tracing-subscriber = "0.2"
chrono = { version = "0.4", features = ["serde"] }
rpds = { version = "0.9", features = ["serde"] }
nom = "7.0.0-alpha1"
rcc_macros = { path = "../rcc_macros" }
fixed_queue = { path = "../fixed_queue" }
nix = "0.22"
bincode = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_with = "1"
toml = "0.5"
once_cell = "1"
parking_lot = "0.11"
flume = "0.10"
arc-swap = "1"
tokio-serde = { version = "0.8", features = ['bincode'] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
