[package]
edition = "2018"
name = "component"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.7"
arc-swap = "1"
atoi = "0.4"
bincode = "1"
bytes = "1"
chrono = {version = "0.4", features = ["serde"]}
common = {path = "./common"}
dict = {path = "./dict"}
fixed_queue = {path = "../fixed_queue"}
flume = "0.10"
futures = "0.3"
nix = "0.22"
nom = "7.0.0-alpha2"
once_cell = "1"
parking_lot = "0.11"
rcc_macros = {path = "../rcc_macros"}
serde = {version = "1", features = ["derive", "rc"]}
serde_with = "1"
structopt = "0.3"
tokio = {version = "1", features = ["full"]}
tokio-serde = {version = "0.8", features = ['bincode']}
tokio-stream = "0.1"
tokio-util = {version = "0.6", features = ["codec"]}
toml = "0.5"
tracing = "0.1"
tracing-futures = {version = "0.2"}
tracing-subscriber = "0.2"
[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = {version = "1", features = ["test-util"]}
