[package]
edition = "2018"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atoi = "0.4"
serde = "1"
once_cell = "1"
serde_with = "1"
tracing = "0.1"
toml = "0.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tracing-subscriber = "0.2"
