[package]
edition = "2021"
name = "common"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atoi = "1"
serde = "1"
once_cell = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
config = "0.12"
bytes = "1"
nom = "7"
keys = { path = "../keys" }

[dev-dependencies]
tracing-subscriber = "0.3"
