[package]
name = "connection"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
common = { path = "../common" }
nom = "7"
atoi = "0.4"
keys = { path = "../keys" }
