[package]
name = "db"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.7"
dict = { path = "../dict" }
common = { path = "../common" }
parking_lot = "0.11"
tokio = { version = "1", features = ["full"] }
flume = "0.10"
tracing = "0.1"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
arc-swap = "1"
once_cell = "1"
nix = "0.22"
futures = "0.3"
tokio-util = { version = "0.6", features = ["codec"] }
tokio-serde = { version = "0.8", features = ['bincode'] }
crc = "2"
keys = { path = "../keys" }

[dev-dependencies]
tracing-subscriber = "0.2"
