[package]
edition = "2018"
name = "dict"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ahash = "0.7"
common = { path = "../common" }
flume = "0.10"
parking_lot = "0.11"
serde = { version = "1", features = ["derive", "rc"] }
tracing = "0.1"
tokio = "1"
keys = { path = "../keys" }
atoi = "0.4"
bincode = "1"
