[package]
name = "pd"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.2"
flume = "0.10"
once_cell = "1"
parking_lot = "0.11"
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
