[package]
name = "pd"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flume = "0.10"
once_cell = "1"
parking_lot = "0.11"
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
bincode = "1"