[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
atoi = "0.4"
bytes = "1"
common = { path = "../common" }
dict = { path = "../dict" }
db = { path = "../db" }
nom = "7.0.0-alpha2"
rcc_macros = { path = "../../rcc_macros" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
