[package]
name = "server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
common = { path = "../common" }
dict = { path = "../dict" }
db = { path = "../db" }
macros = { path = "../macros" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
nix = "0.23"
bincode = "1"
keys = { path = "../keys" }
